fix: make accomplishment cards always visible during event phase
note:

- event deck is the default view
- view changes to event deck when marsEventsProcessed state value is modified
- fix: incorrect event name title value

--- a/client/src/stylesheets/game/phases/investment/TimeBlockMeter.scss
+++ b/client/src/stylesheets/game/phases/investment/TimeBlockMeter.scss
@@ -20,7 +20,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    background-color: $space-lightgray;
+    background-color: $new-space-orange;
     transition: all 0.15s ease-in-out;
   }
 }
